--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,8 @@
     "description": "Library to create type bindings between PHP8 and TS, supporting parsing, serialization and emitting of  TS types for PHP objects/input strongly typed",
     "type": "library",
     "require-dev": {
-        "pestphp/pest": "4.x-dev"
+        "pestphp/pest": "4.x-dev",
+        "phpstan/phpstan": "2.1.x-dev"
     },
     "autoload": {
         "psr-4": {
@@ -21,12 +22,15 @@
         }
     ],
     "minimum-stability": "dev",
+    "prefer-stable": true,
     "config": {
         "allow-plugins": {
             "pestphp/pest-plugin": true
         }
     },
     "scripts": {
-        "test": "pest"
+        "test": "pest",
+        "phpstan": "phpstan analyse src --level=4",
+        "check:all": ["@test", "@phpstan"]
     }
 }
