--- a/phpstan.neon
+++ b/phpstan.neon
@@ -16,4 +16,4 @@ parameters:
 #        - '#PHPDoc tag @var#'
 #
     excludePaths:
-#        - ./*/*/FileToBeExcluded.php
+        - ./src/Adapters/*
