Better code gen Better types

--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
     "php": "^8.4",
     "pestphp/pest": "4.x-dev",
     "phpstan/phpstan": "2.1.x-dev",
-    "laravel/framework": "^11|^12"
+    "laravel/framework": "^11|^12",
+    "mockery/mockery": "^1.6"
   },
   "autoload": {
     "psr-4": {
