Big refactor, better server, more independant of laravel.
Main features
- Independent server without any transport dependency
  - error presenters
  - clear types
  - independent middleware
- Key obfuscation capabilities
- Better and composable code generation for the default server on laravel
- Verification capability of generated code.
- Configuration of error handling in laravel

--- a/phpstan.neon
+++ b/phpstan.neon
@@ -12,8 +12,9 @@ parameters:
 #    typeAliases:
 #        Email: 'non-empty-string'
 
-#    ignoreErrors:
-#        - '#PHPDoc tag @var#'
+    ignoreErrors:
+        - '#class-string<operations.default_server>#'
+
 #
 #    excludePaths:
 #        - ./src/Adapters/*
