--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,10 +1,15 @@
-# includes:
-#     - vendor/larastan/larastan/extension.neon
-#     - vendor/nesbot/carbon/extension.neon
+includes:
+    - extension.neon
 
 parameters:
     paths:
         - src/
+
+    # ToDo: Enable this in the future
+    reportPossiblyNonexistentGeneralArrayOffset: false
+    checkMissingCallableSignature: false
+    checkBenevolentUnionTypes: true
+    reportPossiblyNonexistentConstantArrayOffset: true
 
     # Level 10 is the highest level
     level: 6
